--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^5.0.0-beta2",
-    "firebase": "^9.22.1",
-    "framer-motion": "^10.12.16",
+    "firebase": "^9.23.0",
+    "firebase-tools": "^12.4.0",
+    "framer-motion": "^10.12.17",
     "md5": "^2.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^1.5.2",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
-    "react-scripts": "^2.1.3"
+    "react-scripts": "^5.0.1"
   },
   "browserslist": {
     "production": [
